--- a/final_demo.ipynb
+++ b/final_demo.ipynb
@@ -3,8 +3,8 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Training a SuperModel\n",
-        "In this project we set out to optimize convolution neural networks through exploring the techniques of data augmentation, pruning, quantization and synchronous training on Cifar100 image dataset. In this notebook, you can test different hyperparameters for this super model and attempt to beat 63% final accuracy on this dataset. Or, users can use this supermodel on a new dataset by uploading their own data under the \"Data\" section."
+        "# Training the Model\n",
+        "We develop a space optimized CNN for image classification through synchronous distributed training, weight pruning, quantization, and data augmentation in Vertex AI on Google Cloud Platform. This is tested on the Cifar100 image dataset. In this notebook, you can try different hyperparameters for this model and attempt to beat 63% test accuracy on this dataset. Or, users can use this supermodel on a new dataset by uploading their own data under the \"Data\" section."
       ],
       "metadata": {
         "id": "nbU_ZUcnHQt3"
