--- a/codes/seventy_sparsity.ipynb
+++ b/codes/seventy_sparsity.ipynb
@@ -4,7 +4,7 @@
       "cell_type": "markdown",
       "source": [
         "# Training a SuperModel\n",
-        "In this project we set out to optimize convolution neural networks through exploring the techniques of data augmentation, pruning, quantization and synchronous training on Cifar100 image dataset.\n",
+        "We develop a space optimized CNN for image classification through synchronous distributed training, weight pruning, quantization, and data augmentation in Vertex AI on Google Cloud Platform. This is tested on the Cifar100 image dataset. In this notebook, you can try different hyperparameters for this model and attempt to beat 63% test accuracy on this dataset. Or, users can use this supermodel on a new dataset by uploading their own data under the \"Data\" section."
         "Testing specifications:\n",
         "For data augmentation, images were shifted horizontally or vertically 10% of the time and also flipped horizontally at random. Also, the training data is normalized, which has been shown to improve accuracy. Batch size is equal to 128 and trained for 300 epochs, utilizing an exponentially decaying learning rate strategy shown in class and adam optimizer. The winning strategy was polynomial decaying of the sparsity, starting at 50% sparsity and ending at 60% sparsity. Here we finetune by trying a final sparsity of 70% instead."
       ],
