--- a/Final Model/super_0.6/super_sixty.ipynb
+++ b/Final Model/super_0.6/super_sixty.ipynb
@@ -4,8 +4,8 @@
       "cell_type": "markdown",
       "source": [
         "# Training a SuperModel\n",
-        "In this project we set out to optimize convolution neural networks through exploring the techniques of data augmentation, pruning, quantization and synchronous training on Cifar100 image dataset. <br>\n",
-        "Testing specifications: <br>\n",
+        "We develop a space optimized CNN for image classification through synchronous distributed training, weight pruning, quantization, and data augmentation in Vertex AI on Google Cloud Platform. This is tested on the Cifar100 image dataset.\n",
+        "Testing specifications: \n",
         "For data augmentation, images were shifted horizontally or vertically 10% of the time and also flipped horizontally at random. Also, the training data is normalized, which has been\n",
         "shown to improve accuracy. Batch size is equal to 128 and trained for 300\n",
         "epochs, utilizing an exponentially decaying learning rate strategy shown in class and adam optimizer. The\n",
