--- a/codes/sixty_sparsity.ipynb
+++ b/codes/sixty_sparsity.ipynb
@@ -3,7 +3,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Training a SuperModel\n",
+        "# Training the Model\n",
         "We develop a space optimized CNN for image classification through synchronous distributed training, weight pruning, quantization, and data augmentation in Vertex AI on Google Cloud Platform. This is tested on the Cifar100 image dataset.\n",
         "Testing specifications: <br>\n",
         "For data augmentation, images were shifted horizontally or vertically 10% of the time and also flipped horizontally at random. Also, the training data is normalized, which has been\n",
